Changes for 3.4.7rc1

New features:

Bug fixes:
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
...G...... [ZBX-11720] fixed memory leak which breaks vfs.fs.size, vfs.fs.inode and vfs.dir.size items if compiled with LeakSanitizer (Andris)
........S. [ZBX-13131] fixed truncated multiline text values from network discovery SNMP checks (viktors)
........S. [ZBX-13343] fixed last trends update clock caching (wiper)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
..F....... [ZBX-13223] fixed graphs duplication in graph preview (ashubin)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
..F....... [ZBX-13214] added support of \0 matching group for regsub and iregsub methods (gcalenko, Sasha)
........S. [ZBX-13208] eliminated race condition that caused history collection for newly created items to start before preprocecessing steps finished syncing (vso)
.......P.. [ZBX-13130] fixed Zabbix proxy not to generate high network traffic when server does not accept data (vso)
..F....... [ZBX-13288] fixed image ghosting for mass update of map elements (vjaceslavs)
...G...... [ZBX-13246] fixed processing of command line arguments which are longer than 2KB for proc.num and proc.mem items on AIX (viktors)

--------------------------------------------------------------------------------
Changes for 3.4.6

3.4.6rc1 was released as 3.4.6 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.6rc1

Bug fixes:
..F....... [ZBX-13276] fixed compatibility issue with Elasticsearch versions starting from 6.0 (vjaceslavs)
..F....... [ZBX-12389] fixed latest data host group filter (Oleg)